--- a/index.html
+++ b/index.html
@@ -4,103 +4,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <img src="./images/WebStudio.webp" alt="logo">
-            <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-            <p>info@devstudio.com</p>
-            <p>+38 096 111 11 11</p>
-        </nav>
+        <div class="header_container">
+            <nav>
+                <a href=""><img class="logo" src="./images/WebStudio.webp" alt="logo" width="150px" height="22px"></a>
+                <div class="header_container--nav">                    
+                    <ul class="header_container--list">
+                        <li class="list-item"><a class="item-a" href="#">Студія</a></li>
+                        <li class="list-item"><a class="item-a" href="#">Портфоліо</a></li>
+                        <li class="list-item"><a class="item-a" href="#">Контакти</a></li>
+                    </ul>
+                    <ul class="contacts">
+                        <li class="list-item"><a class="item_a" href="#">info@devstudio.com</a></li>
+                        <li class="list-item"><a class="item_a" href="#">+38 096 111 11 11</a></li>
+                    </ul>
+                </div>
+            </nav>            
+        </div>
+        <hr>
     </header>
+    
     <main>
-        <section>
-            <div>
-                <ul>
-                    <li><button>Усі</button></li>
-                    <li><button>Веб-сайти</button></li>
-                    <li><button>Додатки</button></li>
-                    <li><button>Дизайн</button></li>
-                    <li><button>Маркетинг</button></li>
-                </ul>
-            </div>
-        </section>
-        <section>
-            <div>
-                <ul>
-                    <li>
-                        <img src="./images/tech.webp" alt="laptop">
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/basketball.webp" alt="basketball">
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/logotype.webp" alt="logotype">
-                        <h3>Ресторан Seafood</h3>
-                        <p>Додаток</p>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <img src="./images/headphones.webp" alt="headphones">
-                        <h3>Проєкт Prime</h3>
-                        <p>Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/boxes.webp" alt="boxes">
-                        <h3>Проєкт Boxes</h3>
-                        <p>Додаток</p>
-                    </li>
-                    <li>
-                        <img src="./images/monitor.webp" alt="monitor">
-                        <h3>Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <img src="./images/magazine.webp" alt="magazine">
-                        <h3>Видання Limited Edition</h3>
-                        <p>Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/birka.webp" alt="birka">
-                        <h3>Проєкт LAB</h3>
-                        <p>Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/laptop.webp" alt="laptop">
-                        <h3>Growing Business</h3>
-                        <p>Додаток</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
+        <div class="main_container">
+            <section>
+                <div class="main_navigation">
+                    <ul class="main_list">
+                        <li class="navigation-list_item"><a href="#"><button class="item-btn1" type="button">Усі</button></a></li>
+                        <li class="navigation-list_item"><a href="#"><button class="item-btn2" type="button">Веб-сайти</button></a></li>
+                        <li class="navigation-list_item"><a href="#"><button class="item-btn3" type="button">Додатки</button></a></li>
+                        <li class="navigation-list_item"><a href="#"><button class="item-btn4" type="button">Дизайн</button></a></li>
+                        <li class="navigation-list_item"><a href="#"><button class="item-btn5" type="button">Маркетинг</button></a></li>
+                    </ul>
+                </div>
+                <div class="main_bread-N-vine">
+                    <div class="first-line">
+                        <ul>
+                            <li class="line-item">
+                                <img src="./images/tech.webp" alt="laptop">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Технокряк</h3>
+                                <p class="item-value">Веб-сайт</p>
+                                </div>                                
+                            </li>
+                            <li class="line-item">
+                                <img src="./images/headphones.webp" alt="headphones">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Проєкт Prime</h3>
+                                <p class="item-value">Маркетинг</p>
+                                </div>                                
+                            </li>
+                            <li class="line-item">
+                                <img src="./images/magazine.webp" alt="magazine">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Видання Limited Edition</h3>
+                                <p class="item-value">Дизайн</p>
+                                </div>                                
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="second-line">
+                        <ul>
+                            <li class="line-item">
+                                <img src="./images/basketball.webp" alt="basketball">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Постер New Orlean vs Golden Star</h3>
+                                <p class="item-value">Дизайн</p>
+                                </div>                                
+                            </li>
+                            <li class="line-item">
+                                <img src="./images/boxes.webp" alt="boxes">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Проєкт Boxes</h3>
+                                <p class="item-value">Додаток</p>
+                                </div>                                
+                            </li>                           
+                            <li class="line-item">
+                                <img src="./images/birka.webp" alt="birka">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Проєкт LAB</h3>
+                                <p class="item-value">Маркетинг</p>
+                                </div>                                
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="third-line">
+                        <ul>
+                            <li class="line-item">
+                                <img src="./images/logotype.webp" alt="logotype">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Ресторан Seafood</h3>
+                                <p class="item-value">Додаток</p>
+                                </div>                                
+                            </li>
+                            <li class="line-item">
+                                <img src="./images/monitor.webp" alt="monitor">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Inspiration has no Borders</h3>
+                                <p class="item-value">Веб-сайт</p>
+                                </div>                                
+                            </li>                            
+                            <li class="line-item">
+                                <img src="./images/laptop.webp" alt="laptop">
+                                <div class="imageless-block">
+                                    <h3 class="item-title">Growing Business</h3>
+                                <p class="item-value">Додаток</p>
+                                </div>                                
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </section>
+        </div>
     </main>
+
     <footer>
-        <img src="./images/WebStudio.webp" alt="logo">
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
+        <div class="footer_container">
+            <div class="footer_logo">
+                <a href=""><img src="./images/WebStudiolast.webp" alt="logo"></a>
+            </div>
+            <div class="footer_contacts">
+                <p id="adress">м. Київ, пр-т Лесі Українки, 26</p>
+                <p>info@devstudio.com</p>
+                <p>+38 096 111 11 11</p>
+            </div>            
+        </div>
     </footer>
 </body>
 </html>
